src/test/ui/editions/edition-keywords-2018-2018-parsing.stderr
error: expected identifier, found keyword `async`
  --> $DIR/edition-keywords-2018-2018-parsing.rs:14:13
   |
LL |     let mut async = 1;
   |             ^^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let mut r#async = 1;
   |             ^^^^^^^

error: expected identifier, found keyword `async`
  --> $DIR/edition-keywords-2018-2018-parsing.rs:24:13
   |
LL |     module::async();
   |             ^^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     module::r#async();
   |             ^^^^^^^

error: no rules expected the token `r#async`
  --> $DIR/edition-keywords-2018-2018-parsing.rs:18:31
   |
LL |     r#async = consumes_async!(r#async);
   |                               ^^^^^^^ no rules expected this token in macro call

error: no rules expected the token `async`
  --> $DIR/edition-keywords-2018-2018-parsing.rs:19:35
   |
LL |     r#async = consumes_async_raw!(async);
   |                                   ^^^^^ no rules expected this token in macro call

error: macro expansion ends with an incomplete expression: expected one of `move`, `|`, or `||`
  --> $DIR/auxiliary/edition-kw-macro-2018.rs:27:23
   |
LL |     ($i: ident) => ($i)
   |                       ^ expected one of `move`, `|`, or `||`
   | 
  ::: $DIR/edition-keywords-2018-2018-parsing.rs:22:8
   |
LL |     if passes_ident!(async) == 1 {}
   |        -------------------- in this macro invocation

error[E0658]: async closures are unstable
  --> $DIR/edition-keywords-2018-2018-parsing.rs:22:22
   |
LL |     if passes_ident!(async) == 1 {}
   |                      ^^^^^
   |
   = note: see issue #62290 <https://github.com/rust-lang/rust/issues/62290> for more information
   = help: add `#![feature(async_closure)]` to the crate attributes to enable

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
